1. Метод .of [#456241]